--- a/views/layout.twig
+++ b/views/layout.twig
@@ -3,8 +3,10 @@
   <head>
     <title>{{ title }}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    {% block css %}{% endblock %}
   </head>
   <body>
     {% block body %}{% endblock %}
   </body>
 </html>
+{% block scripts %}{% endblock %}
