--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,8 +1,45 @@
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Cabin|Inconsolata|Indie+Flower|Nunito|Nunito+Sans|Pacifico|Quicksand|Rubik|VT323');
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    background: darkkhaki;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
+}
+
+.h1 {
+    padding-top: 4rem;
+    font-weight: bolder;
+    font-size: 3rem;
+    font-family: 'Abril Fatface', cursive;
+}
+
+.h2 {
+    font-weight: bold;
+    padding-top: 5rem;
+    padding-bottom: 2rem;
+    font-family: 'Pacifico', cursive;
+}
+
+.score {
+    padding:auto;
+    display: block;
+    font-family: 'VT323', monospace;
+    font-size: 7rem;
+}
+.index {
+    font-family: 'VT323', monospace;
+    font-size: 2rem;
+}
+
+.footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2rem;
+    line-height: 2rem;
+    background-color: #343a40;
 }
