--- a/views/scores.twig
+++ b/views/scores.twig
@@ -1,13 +1,26 @@
 {% extends 'layout.twig' %}
-
-
     {% block body %}
-        <h1>Kittens score</h1>
-        <ul>
-            {% for cat in cats %}
-                <li><img src="{{ cat.url }}" alt=""> score: {{ cat.score }}</li>
-            {% endfor %}
-        </ul>
+        {%  block title %}{{ parent() }}{% endblock %}
+        <h2 class="h2 text-center">Kittens score</h2>
+        <div class="container">
+            <ol class="list-group list-group-flush">
+                {% for cat in cats %}
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-xs-1">
+                                <span class="align-middle index">{{ loop.index }}</span>
+                            </div>
+                            <div class="col">
+                            <img class="col img-fluid rounded mx-auto d-block" src="{{ cat.url }}" alt="">
+                            </div>
+                            <div class="col">
+                                <span class="align-middle score">Score : {{ cat.score }}</span>
+                            </div>
+                        </div>
+                    </li>
+                {% endfor %}
+            </ol>
+        </div>
 
     {% endblock %}
 
