changed the list in score for an ul and removed the bootstrap list

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -43,3 +43,8 @@ a {
     line-height: 2rem;
     background-color: #343a40;
 }
+
+.row-image-score {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
