padding to li in /scores

--- a/views/scores.twig
+++ b/views/scores.twig
@@ -5,8 +5,8 @@
         <div class="container">
             <ul style="list-style-type: none">
                 {% for cat in cats %}
-                    <li>
-                        <div class="row row-image-score">
+                    <li style="padding-top: 1rem; padding-bottom: 1rem">
+                        <div class="row">
                             <div class="col-xs-1">
                                 <span class="align-middle index">{{ loop.index }}</span>
                             </div>
