added error page for 440

--- a/views/error440.twig
+++ b/views/error440.twig
@@ -1,6 +1,5 @@
 {% extends 'layout.twig' %}
 
 {% block body %}
-  <h1>{{title}}</h1>
-  <p>Welcome to {{title}}</p>
+  <h1 class="h1">Your page doesn't exist 440 !</h1>
 {% endblock %}
